# MinecraftSignalingServ

./: .env  Dockerfile  alembic.ini  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: e00e16eb3228_.py
src/: base.py  config.py  db.py  exceptions.py  main.py  utils.py
src/auth/: backends.py  manager.py  models.py
src/host_manager/: domain.py  manager.py  router.py  schemas.py
src/world_sync/: router.py
